# CellCage-lite

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  demo.py  render.py
bench/: __init__.py  eval_classification.py  eval_detection.py  run.py
cage/: __init__.py  geometry.py  mis.py  placement.py  shapes.py  types.py  validate.py
classify/: __init__.py  classifier.py  embed.py  finetune.py  head.py  lora.py
data/: __init__.py  make_synthetic.py  synthetic.py
detect/: __init__.py  detector.py  model.py  train.py
pipeline/: __init__.py  runner.py
tests/: test_bench.py  test_classify.py  test_data.py  test_demo.py  test_detect.py  test_geometry.py  test_hexagon.py  test_mis.py  test_pipeline.py  test_placement.py  test_track.py
track/: __init__.py  kalman.py  metrics.py  tracker.py
