[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cellcage-lite"
version = "0.1.0"
description = "Vision-and-optimization pipeline for single-cell caging: detect, classify, place cages, track."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
vision = [
    "torch>=2.2",
    "torchvision>=0.17",
    "cellpose>=3.0",
    "scikit-image>=0.22",
]
demo = ["gradio>=4.0"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["cage*", "track*", "data*", "detect*", "classify*", "bench*", "app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
